@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.restcomm</groupId>
 		<artifactId>restcomm-parent</artifactId>
-		<version>3.0.4</version>
+		<version>4.0.1</version>
 	</parent>
 
   <groupId>org.restcomm</groupId>
@@ -80,6 +80,8 @@
 	</distributionManagement>
 
 	<properties>
+            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
 		<scala-lang.version>2.10.1</scala-lang.version>
 		<akka.version>2.1.2</akka.version>
 		<guava.version>14.0.1</guava.version>
@@ -90,6 +92,7 @@
 		<commons-codec.version>1.10</commons-codec.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<jain.mgcp.version>1.0</jain.mgcp.version>
+                <jain-sip-api.version>1.2.0</jain-sip-api.version>
 		<mobicents.mgcp.impl.version>6.0.23</mobicents.mgcp.impl.version>
 		<javamail.version>1.4</javamail.version>
 		<servletapi.version>2.5</servletapi.version>
@@ -101,21 +104,22 @@
 		<shiroweb.version>1.2.0</shiroweb.version>
 		<jersey.version>1.13</jersey.version>
 		<httpclient.version>4.5.2</httpclient.version>
+		<httpasyncclient.version>4.1.3</httpasyncclient.version>
 		<gson.version>2.3.1</gson.version>
 		<xstream.version>1.4.2</xstream.version>
 		<mongodb.version>2.7.2</mongodb.version>
 		<mybatis.version>3.2.2</mybatis.version>
 		<jodatime.version>2.9.7</jodatime.version>
 		<libphonenumber.version>4.3</libphonenumber.version>
-		<junit.version>4.10</junit.version>
+		<junit.version>4.11</junit.version>
 		<scalatest.version>1.9.1</scalatest.version>
 		<hsqldb.version>2.3.2</hsqldb.version>
     <sip-ri.version>1.2.293</sip-ri.version>
 		<arquillian.version>1.0.3.Final</arquillian.version>
-		<mss.arquillian.version>1.0.1</mss.arquillian.version>
+		<mss.arquillian.version>1.0.3</mss.arquillian.version>
 		<mss.shrinkwrap.version>1.0.2</mss.shrinkwrap.version>
 		<shrinkwrap.resolver.version>2.0.0-alpha-4</shrinkwrap.resolver.version>
-		<sipunit.version>2.0.1</sipunit.version>
+		<sipunit.version>2.0.4</sipunit.version>
 		<!--tomcat.version>6.0.35</tomcat.version -->
 		<tomcat7.version>7.0.64</tomcat7.version>
 		<mobicents.checkstyle.version>1.0.0.FINAL</mobicents.checkstyle.version>
@@ -130,9 +134,11 @@
 		<netty.version>3.9.6.Final</netty.version>
 		<logback.version>1.1.3</logback.version>
 		<maven-artifact.version>3.1.0</maven-artifact.version>
-		<smpp-extensions.version>1.0.13</smpp-extensions.version>
+		<smpp-extensions.version>7.1.0-79</smpp-extensions.version>
 		<mockito-core.version>2.8.9</mockito-core.version>
-
+                <!-- IDEs has a problem when we use late binding with @ in the surefire arg line.
+                    Therefore we set this empty property here-->
+                <jacocoArgLine />
 	</properties>
 	<modules>
 		<!-- <module>restcomm.docs</module> -->
@@ -174,6 +180,7 @@
                 <module>restcomm.dns.api</module>
                 <module>restcomm.monitoring.service</module>
                 <module>restcomm.tts.awspolly</module>
+		<module>restcomm.sdr.api</module>
   </modules>
 
 	<dependencyManagement>
@@ -340,6 +347,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>com.sun.jersey</groupId>
+				<artifactId>jersey-json</artifactId>
+				<version>${jersey.version}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>stax</groupId>
 				<artifactId>stax-api</artifactId>
 				<version>${staxapi.version}</version>
@@ -357,6 +370,12 @@
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
 				<version>${httpclient.version}</version>
+			</dependency>
+
+			<dependency>
+		  		<groupId>org.apache.httpcomponents</groupId>
+		  		<artifactId>httpasyncclient</artifactId>
+				<version>${httpasyncclient.version}</version>
 			</dependency>
 
 			<dependency>
@@ -468,6 +487,10 @@
 						<groupId>com.telscale.licensing</groupId>
 						<artifactId>lce-core</artifactId>
 					</exclusion>
+					<exclusion>
+						<groupId>org.mobicents.sipunit</groupId>
+						<artifactId>*</artifactId>
+					</exclusion>
 				</exclusions>
 			</dependency>
 
@@ -527,7 +550,7 @@
 				<artifactId>smpp-extensions</artifactId>
 				<version>${smpp-extensions.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
@@ -602,36 +625,6 @@
                         <scope>test</scope>
 		</dependency>
 
-		<!--
-		<dependency>
-			<groupId>org.mobicents.arquillian.container</groupId>
-			<artifactId>mss-tomcat-embedded-7</artifactId>
-			<version>${mss.arquillian.version}</version>
-			<scope>test</scope>
-		</dependency>
-		-->
-
-		<dependency>
-			<groupId>org.jboss.arquillian.junit</groupId>
-			<artifactId>arquillian-junit-container</artifactId>
-			<version>${arquillian.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jboss.shrinkwrap.resolver</groupId>
-			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-			<version>${shrinkwrap.resolver.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jboss.shrinkwrap.resolver</groupId>
-			<artifactId>shrinkwrap-resolver-impl-maven-archive</artifactId>
-			<version>${shrinkwrap.resolver.version}</version>
-			<scope>test</scope>
-		</dependency>
-
 		<dependency>
 			<groupId>org.mobicents.sipunit</groupId>
 			<artifactId>sipunit</artifactId>
@@ -655,7 +648,7 @@
 			<artifactId>commons-lang</artifactId>
 			<version>${commons-lang.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
@@ -689,20 +682,14 @@
 				</configuration>
 			</plugin>
 			<!-- When testing maven sure fire spawns a new JVM. Setting it to never fixed the issue. -->
-			<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
 				<configuration>
-					<forkMode>never</forkMode>
-					<argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=2048m</argLine>
-					<systemPropertyVariables>
-						<user.name>${user.name}</user.name>
-					</systemPropertyVariables>
+                                    <!-- Sets the VM argument line used when unit tests are run. -->
+                                    <argLine>@{jacocoArgLine}</argLine>
 				</configuration>
 			</plugin>
-			-->
 			<!-- Checkstyle -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -737,6 +724,46 @@
 		                <artifactId>license-maven-plugin</artifactId>
 		                <version>1.13</version>
 		        </plugin>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>0.7.9</version>
+                        <executions>
+                            <!--
+                                Prepares the property pointing to the JaCoCo runtime agent which
+                                is passed as VM argument when Maven the Surefire plugin is executed.
+                            -->
+                            <execution>
+                                <id>pre-unit-test</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                                <configuration>
+                                    <!--
+                                        Sets the name of the property containing the settings
+                                        for JaCoCo runtime agent.
+                                    -->
+                                    <propertyName>jacocoArgLine</propertyName>
+                                    <append>true</append>
+                                </configuration>
+                            </execution>
+                            <!--
+                                Ensures that the code coverage report for unit tests is created after
+                                unit tests have been run.
+                            -->
+                            <execution>
+                                <id>post-unit-test</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- Sets the output directory for the code coverage report. -->
+                                    <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
